// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar render default 1`] = `
<nav
  className="flex items-center justify-between flex-wrap bg-gray-200 px-4 py-2"
/>
`;

exports[`Navbar should render with children 1`] = `
<nav
  className="flex items-center justify-between flex-wrap bg-gray-200 px-4 py-2"
>
  children
</nav>
`;

exports[`Navbar should render with children and className 1`] = `
<nav
  className="test-class flex items-center justify-between flex-wrap bg-gray-200 px-4 py-2"
>
  children
</nav>
`;
